chore: formatting + openapi.json file
