# backend/src/features/platforms/types.ts
@@ -1,4 +1,4 @@
-import type { InferSelectModel } from "drizzle-orm"
-import type { platforms } from "@/db/schema"
+import type { InferSelectModel } from "drizzle-orm";
+import type { platforms } from "@/db/schema";
 
-export type Platform = InferSelectModel<typeof platforms>
+export type Platform = InferSelectModel<typeof platforms>;
